[package]
name = "rpaxos"
version = "0.1.0"
authors = ["Martin Wang <wangxuesong@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4.0"
prost = "0.7.0"
tokio = { version = "1.2.0", features = ["rt-multi-thread", "macros", "sync", "time"] }

[build-dependencies]
tonic-build = "0.4.0"
