[package]
name = "rpaxos"
version = "0.1.0"
authors = ["Martin Wang <wangxuesong@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rpaxos"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
tonic = "0.4.0"
prost = "0.7.0"
tokio = { version = "1.2.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
anyhow = "1.0.38"

[dev-dependencies]
triggered = "0.1.1"
scopeguard = "1.1.0"
tokio-test = "0.4.0"

[build-dependencies]
tonic-build = { version = "0.4.0", features = ["prost"] }
